--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,7 +46,7 @@
             <table>
               <tr>
                 <td>
-                  <a href="/actions/calls">Call total</a>
+                  <a href="/actions/call">Call total</a>
                 </td>
                 <td>R<span class="callTotalSettings">{{totals.callTotal}}</span> </td>
               </tr>
