--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,7 +60,7 @@
                 <td>
                   <a href="/actions">Total</a>
                 </td>
-                <td> R<span class="totalSettings">{{totals.grandTotal}}</span> </td>
+                <td> R<span class="totalSettings {{colors}}">{{totals.grandTotal}}</span> </td>
               </tr>
             </table>
 
