--- a/views/actions.handlebars
+++ b/views/actions.handlebars
@@ -1,18 +1,36 @@
-<div class="row">
-    <h1>Actions</h1>
+<!DOCTYPE html>
+<html>
 
-    <table>
-        <tr>
-        <th>Type</th>
-        <th>Price</th>
-        <th>When</th>
-        </tr>
-        {{#each actions}}
-        <tr>
-            <td>{{type}}</td>
-            <td>{{cost}}</td>
-            <td>{{timestamp}}</td>
-        </tr>
-        {{/each}}
-    </table>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+<div class="container">
+
+    <div class="row">
+        <h1>Actions</h1>
+
+        <table>
+            <tr>
+            <th>Type</th>
+            <th>Price</th>
+            <th>When</th>
+            </tr>
+            {{#each actions}}
+            <tr>
+                <td>{{type}}</td>
+                <td>{{cost}}</td>
+                <td>{{time}}</td>
+            </tr>
+            {{/each}}
+        </table>
+    </div>
+
 </div>
+
+</body>
+</html>
